--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,23 @@
   -->
   <dependencies>
     <dependency>
+      <groupId>com.oracle.truffle</groupId>
+      <artifactId>truffle-api</artifactId>
+      <version>0.16</version>
+    </dependency>
+    <dependency>
+      <groupId>com.oracle.truffle</groupId>
+      <artifactId>truffle-tck</artifactId>
+      <version>0.16</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.oracle.truffle</groupId>
+      <artifactId>truffle-dsl-processor</artifactId>
+      <version>0.16</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>org.antlr</groupId>
       <artifactId>antlr4</artifactId>
       <version>4.5</version>
